# 3D.Viewer

./: CMakeLists.txt  README.md
src/: 3DViewer.h  Doxyfile  Makefile
src/_example/: main.c
src/controller/: controller.cpp  controller.h
src/lib/: tiny_obj_loader.h
src/model/: cordinate_processing.cpp  data.cpp
src/test/: pyramid.txt  unit_tests.cpp
src/view/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h
src/view/QtGifImage/gifimage/: qgifimage.cpp
src/view/QtGifImage/giflib/: gifalloc.c
